--- a/gui/src/tools/CertTool.ui
+++ b/gui/src/tools/CertTool.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QComboBox" name="comboBoxEngine">
+      <widget class="QComboBox" name="comboBoxTargetType">
        <property name="minimumSize">
         <size>
          <width>110</width>
@@ -26,12 +26,12 @@
        </property>
        <item>
         <property name="text">
-         <string>Active</string>
+         <string>Cert FingerPrint</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>Crtsh</string>
+         <string>Hostname</string>
         </property>
        </item>
       </widget>
@@ -88,24 +88,37 @@
       <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <property name="leftMargin">
-       <number>2</number>
-      </property>
-      <property name="rightMargin">
-       <number>2</number>
-      </property>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="labelOption">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
-         <string>*Scan Config</string>
+         <string>*Osint Module</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QToolButton" name="toolButton_2">
-        <property name="text">
-         <string>Config...</string>
+       <widget class="QComboBox" name="comboBoxOption">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
         </property>
+        <item>
+         <property name="text">
+          <string>Crstsh</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Certspotter</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
