--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -127,7 +127,8 @@ QComboBox {
     border-color: black;
     border-width: 1px;
     color: rgb(230,230,230);
-    padding: 2px;
+    padding-left: 5px;
+    padding-bottom: 1px;
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
 }
 
@@ -136,6 +137,7 @@ QComboBox QWidget {
     border-style: solid;
     border-color: black;
     border-width: 1px;
+    padding-left: 5px;
     color: rgb(250,250,250);
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
     selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(141, 141, 106, 180));
@@ -145,6 +147,7 @@ QComboBox::drop-down {
     image: url(:/img/res/icons/arrow.png);
     padding-top: 6px;
     padding-right: 5px;
+    padding-left: 5px;
 }
 
 QComboBox QWidget::item {
