--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -483,7 +483,7 @@ QRadioButton:hover {
      <number>0</number>
     </property>
     <item>
-     <widget class="QTabWidget" name="tabWidget_mainTab">
+     <widget class="QTabWidget" name="tabWidgetMain">
       <property name="minimumSize">
        <size>
         <width>1000</width>
@@ -507,6 +507,53 @@ QRadioButton:hover {
       <property name="styleSheet">
        <string notr="true"/>
       </property>
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="tabPassive">
+       <attribute name="title">
+        <string>Passive</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>4</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QTabWidget" name="tabWidgetPassive"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabActive">
+       <attribute name="title">
+        <string>Active</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>4</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QTabWidget" name="tabWidgetActive"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
