--- a/gui/res.qrc
+++ b/gui/res.qrc
@@ -1,11 +1,11 @@
 <RCC>
     <qresource prefix="/img">
         <file>res/icons/folder2.png</file>
-        <file>res/icons/arrow.png</file>
-        <file>res/icons/checkBox2.png</file>
-        <file>res/icons/s3s.ico</file>
-        <file>res/icons/logo.ico</file>
+        <file>res/icons/checkBox.png</file>
         <file>res/icons/splash.png</file>
+        <file>res/icons/logo.ico</file>
+        <file>res/icons/downArrow.png</file>
+        <file>res/icons/array.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/nameservers.txt</file>
