--- a/gui/res/themes/stylesheet.qss
+++ b/gui/res/themes/stylesheet.qss
@@ -127,8 +127,8 @@ QComboBox QWidget {
 }
 
 QComboBox::drop-down {
-    image: url(:/img/res/icons/arrow.png);
-    padding-top: 6px;
+    image: url(:/img/res/icons/downArrow.png);
+    padding-top: 3px;
     padding-right: 5px;
     padding-left: 5px;
 }
@@ -426,7 +426,7 @@ QCheckBox::indicator:checked {
     border-style:solid;
     border-width:1px;
     border-color: rgb(47,47,47);
-    image: url(:/img/res/icons/checkBox2.png);
+    image: url(:/img/res/icons/checkBox.png);
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(75, 75, 75, 255), stop:1 rgb(143, 143, 107));
 }
 
