--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -604,12 +604,16 @@ QRadioButton:hover {
     <property name="title">
      <string>Tools</string>
     </property>
+    <addaction name="actionDomainTool"/>
+    <addaction name="actionMXTool"/>
+    <addaction name="actionNSTool"/>
+    <addaction name="separator"/>
     <addaction name="actionASNTool"/>
     <addaction name="actionCIDRTool"/>
-    <addaction name="actionCertTool"/>
-    <addaction name="actionEmailTool"/>
     <addaction name="actionIpTool"/>
     <addaction name="separator"/>
+    <addaction name="actionCertTool"/>
+    <addaction name="actionEmailTool"/>
     <addaction name="actionBannerTool"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -791,6 +795,21 @@ QRadioButton:hover {
   <action name="actionBannerTool">
    <property name="text">
     <string>BANNER Tool</string>
+   </property>
+  </action>
+  <action name="actionDomainTool">
+   <property name="text">
+    <string>DOMAIN Tool</string>
+   </property>
+  </action>
+  <action name="actionNSTool">
+   <property name="text">
+    <string>NS Tool</string>
+   </property>
+  </action>
+  <action name="actionMXTool">
+   <property name="text">
+    <string>MX Tool</string>
    </property>
   </action>
  </widget>
