--- a/gui/src/tools/CertTool.ui
+++ b/gui/src/tools/CertTool.ui
@@ -40,7 +40,7 @@
       <widget class="QLineEdit" name="lineEditTarget"/>
      </item>
      <item>
-      <widget class="QPushButton" name="buttonAnalyze">
+      <widget class="QPushButton" name="buttonStart">
        <property name="minimumSize">
         <size>
          <width>75</width>
@@ -54,7 +54,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Analyze</string>
+        <string>Start</string>
        </property>
       </widget>
      </item>
