--- a/gui/src/tools/CidrTool.ui
+++ b/gui/src/tools/CidrTool.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>CIDR Tool</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
@@ -35,7 +35,7 @@
       <widget class="QLineEdit" name="lineEditTarget"/>
      </item>
      <item>
-      <widget class="QPushButton" name="buttonAnalyze">
+      <widget class="QPushButton" name="buttonStart">
        <property name="minimumSize">
         <size>
          <width>75</width>
@@ -43,7 +43,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Analyze</string>
+        <string>Start</string>
        </property>
       </widget>
      </item>
