--- a/gui/src/tools/EmailTool.ui
+++ b/gui/src/tools/EmailTool.ui
@@ -67,7 +67,7 @@
           <widget class="QLineEdit" name="lineEditTarget"/>
          </item>
          <item>
-          <widget class="QPushButton" name="buttonAnalyze">
+          <widget class="QPushButton" name="buttonStart">
            <property name="minimumSize">
             <size>
              <width>75</width>
@@ -81,7 +81,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Analyze</string>
+            <string>Start</string>
            </property>
           </widget>
          </item>
