--- a/gui/src/tools/IpTool.ui
+++ b/gui/src/tools/IpTool.ui
@@ -45,7 +45,7 @@
       <widget class="QLineEdit" name="lineEditTarget"/>
      </item>
      <item>
-      <widget class="QPushButton" name="buttonAnalyze">
+      <widget class="QPushButton" name="buttonStart">
        <property name="minimumSize">
         <size>
          <width>75</width>
@@ -59,7 +59,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Analyze</string>
+        <string>Start</string>
        </property>
       </widget>
      </item>
